# DAQ-Driver

./: .gitignore  .gitmodules  .hgignore  CMakeLists.txt  GenerateSLN.ps1  LICENSE  README.md  SetupEnvironment.ps1  VoyagerUSBLibrary.sln  _abstract_driver_component_8cpp.html  _abstract_driver_component_8cpp__incl.map  _abstract_driver_component_8cpp__incl.md5  _abstract_driver_component_8cpp_source.html  _abstract_driver_component_8h.html  _abstract_driver_component_8h.js  _abstract_driver_component_8h__dep__incl.map  _abstract_driver_component_8h__dep__incl.md5  _abstract_driver_component_8h__incl.map  _abstract_driver_component_8h__incl.md5  _abstract_driver_component_8h_source.html  _abstract_socket_connector_8h.html  _abstract_socket_connector_8h.js  _abstract_socket_connector_8h__dep__incl.map  _abstract_socket_connector_8h__dep__incl.md5  _abstract_socket_connector_8h__incl.map  _abstract_socket_connector_8h__incl.md5  _abstract_socket_connector_8h_source.html  _c_r_c_8h.html  _c_r_c_8h.js  _c_r_c_8h__dep__incl.map  _c_r_c_8h__dep__incl.md5  _c_r_c_8h__incl.map  _c_r_c_8h__incl.md5  _c_r_c_8h_source.html  _callback_handler_8cpp.html  _callback_handler_8cpp__incl.map  _callback_handler_8cpp__incl.md5  _callback_handler_8cpp_source.html  _callback_handler_8h.html  _callback_handler_8h.js  (+544 more)
.github/workflows/: documentation.yml  main.yml
Debugger/: CMakeLists.txt  SystemAudioDriver.cpp  SystemAudioDriver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Debugger/Components/: Controls.cpp  Controls.h  Controls.ui  DiscoveredVoyagerList.cpp  DiscoveredVoyagerList.h  DiscoveredVoyagerList.ui  WaveForm.cpp  WaveForm.h  WaveForm.ui
Documentation/: Doxyfile
DoxyGen/: Doxyfile
Driver/: CMakeLists.txt  DAQDriver.cpp  DAQDriver.h  Driver.sln  DriverInfo.h
Driver/Discovery/: DeviceDiscovery.cpp  DeviceDiscovery.h  DiscoveredDevice.cpp  DiscoveredDevice.h
Driver/Driver/: Driver.vcxproj
Driver/DriverComponents/: AbstractDriverComponent.cpp  AbstractDriverComponent.h  DeviceControl.cpp  DeviceControl.h  DeviceInfo.cpp  DeviceInfo.h  DeviceStatus.cpp  DeviceStatus.h  Formatting.cpp  Formatting.h  Heartbeat.cpp  Heartbeat.h  IEPE.cpp  IEPE.h  InputRange.cpp  InputRange.h  Streaming.cpp  Streaming.h  Time.cpp  Time.h
Driver/MessageProcessing/: Message.h  MessageAcknowledgement.cpp  MessageAcknowledgement.h  MessageDeserializer.cpp  MessageDeserializer.h  MessageHashTable.cpp  MessageHashTable.h  MessageParser.cpp  MessageParser.h  MessageProcessor.cpp  MessageProcessor.h  MessageRouter.cpp  MessageRouter.h  MessageSerializer.cpp  MessageSerializer.h  Timer.cpp  Timer.h
Driver/ProtoBuf/ChannelConfiguration/: ChannelConfiguration.proto
Driver/ProtoBuf/DeviceControl/: GrabControl.proto  Reboot.proto  ReleaseControl.proto  Reset.proto  Shutdown.proto
Driver/ProtoBuf/DeviceInfo/: DeviceInfo.proto  DeviceInfoRequest.proto  DeviceInfoResponse.proto  DeviceInfoStructure.proto
Driver/ProtoBuf/DeviceStatus/: DeviceStatusRequest.proto  DeviceStatusResponse.proto  DeviceStatusStructure.proto
Driver/ProtoBuf/Formatting/: DataFormat.proto  SetDataFormat.proto
Driver/ProtoBuf/Hearthbeat/: Beat.proto
Driver/ProtoBuf/IEPE/: SetIEPE.proto
Driver/ProtoBuf/InputRange/: SetInputRange.proto
Driver/ProtoBuf/MessageProcessing/: MessageAck.proto
Driver/ProtoBuf/Streaming/: DataBuffer.proto  StartStream.proto  StopStream.proto
Driver/ProtoBuf/TimeSync/: TimeRequest.proto  TimeResponse.proto
Driver/SerialConnector/: AbstractSerialConnector.h  GenericSerialConnector.cpp  GenericSerialConnector.h  QtSerialConnector.cpp  QtSerialConnector.h
Driver/SocketConnector/: AbstractSocketConnector.h  ClientSocketConnector.cpp  ClientSocketConnector.h  ServerSocketConnector.cpp  ServerSocketConnector.h
Driver/Threading/: CallbackHandler.cpp  CallbackHandler.h  EventLoopThread.cpp  EventLoopThread.h
Libraries/IXWebSocket/: CMakeLists.txt
Libraries/libusbp/: CMakeLists.txt  README.md
Libraries/libusbp/src/: CMakeLists.txt
Libraries/zeroconf/: CMakeLists.txt
Scripts/: GenerateSLN.ps1  SetupEnvironment.ps1
VoyagerUSBLibrary/: EventManager.h  InterThreadStorage.cpp  InterThreadStorage.h  Manager.cpp  Manager.h  MyTimer.cpp  MyTimer.h  VoyagerUSBLibrary.sln  daq-driver.vcxproj  daq-driver.vcxproj.filters  main.cpp
VoyagerUSBLibrary/Protobuf/: ProtobufComparer.cpp  ProtobufConfiguration.pb.cc  ProtobufConfiguration.pb.h
VoyagerUSBLibrary/SerialInterface/: AbstractDriverInterface.cpp  AbstractDriverInterface.h
VoyagerUSBLibrary/SerialInterface/Linux/: LinuxSerialInterface.cpp  LinuxSerialInterface.h
VoyagerUSBLibrary/SerialInterface/Voyager/: VoyagerSerialInterface.cpp  VoyagerSerialInterface.h
VoyagerUSBLibrary/SerialInterface/Windows/: WindowsSerialInterface.cpp  WindowsSerialInterface.h
daq-driver/: AbstractDriverInterface.cpp  AbstractDriverInterface.h  Configuration.pb.cc  Configuration.pb.h  Configuration.proto  EventManager.cpp  EventManager.h  EventsManager.cpp  EventsManager.h  EventsPublisher.cpp  InterThreadStorage.cpp  InterThreadStorage.h  Manager.cpp  Manager.h  ProtocolParser.cpp  ProtocolParser.h  SerialDriver.cpp  SerialDriver.h  SerialDriverInterface.cpp  SerialDriverInterface.h  VoyagerAbstractionLayer.cpp  VoyagerAbstractionLayer.h  daq-driver.vcxproj  daq-driver.vcxproj.filters  main.cpp  szevent.h
daq-driver/Protobuf/: ProtobufComparer.cpp  ProtobufComparer.h  ProtobufConfiguration.proto  ProtobufParser.cpp  ProtobufParser.h  libprotobuf.lib
daq-driver/SerialInterface/: AbstractDriverInterface.cpp  AbstractDriverInterface.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  (+38 more)
(+10 files in other folders)
